@@ -6,6 +6,7 @@ import android.os.Bundle;
 import android.os.ResultReceiver;
 import android.support.v4.media.MediaDescriptionCompat;
 import android.support.v4.media.session.PlaybackStateCompat;
+import android.widget.Toast;
 
 import androidx.annotation.MainThread;
 import androidx.annotation.NonNull;
@@ -19,19 +20,25 @@ import com.google.android.exoplayer2.Timeline;
 import com.google.android.exoplayer2.ext.mediasession.MediaSessionConnector;
 import com.google.android.exoplayer2.source.ConcatenatingMediaSource;
 
+import org.signal.core.util.ThreadUtil;
 import org.signal.core.util.logging.Log;
+import org.thoughtcrime.securesms.R;
 import org.thoughtcrime.securesms.database.DatabaseFactory;
 import org.thoughtcrime.securesms.database.NoSuchMessageException;
 import org.thoughtcrime.securesms.database.model.MessageRecord;
+import org.thoughtcrime.securesms.recipients.Recipient;
+import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.util.MessageRecordUtil;
 import org.thoughtcrime.securesms.util.Util;
 import org.thoughtcrime.securesms.util.concurrent.SimpleTask;
+import org.thoughtcrime.securesms.video.exo.AttachmentMediaSourceFactory;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 /**
  * ExoPlayer Preparer for Voice Notes. This only supports ACTION_PLAY_FROM_URI
@@ -47,9 +54,9 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
 
   private final Context                     context;
   private final SimpleExoPlayer             player;
-  private final VoiceNoteQueueDataAdapter   queueDataAdapter;
-  private final VoiceNoteMediaSourceFactory mediaSourceFactory;
-  private final ConcatenatingMediaSource    dataSource;
+  private final VoiceNoteQueueDataAdapter    queueDataAdapter;
+  private final AttachmentMediaSourceFactory mediaSourceFactory;
+  private final ConcatenatingMediaSource     dataSource;
 
   private boolean canLoadMore;
   private Uri     latestUri = Uri.EMPTY;
@@ -57,7 +64,7 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
   VoiceNotePlaybackPreparer(@NonNull Context context,
                             @NonNull SimpleExoPlayer player,
                             @NonNull VoiceNoteQueueDataAdapter queueDataAdapter,
-                            @NonNull VoiceNoteMediaSourceFactory mediaSourceFactory)
+                            @NonNull AttachmentMediaSourceFactory mediaSourceFactory)
   {
     this.context            = context;
     this.player             = player;
@@ -91,6 +98,7 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
     Log.d(TAG, "onPrepareFromUri: " + uri);
 
     long    messageId      = extras.getLong(VoiceNoteMediaController.EXTRA_MESSAGE_ID);
+    long    threadId       = extras.getLong(VoiceNoteMediaController.EXTRA_THREAD_ID);
     double  progress       = extras.getDouble(VoiceNoteMediaController.EXTRA_PROGRESS, 0);
     boolean singlePlayback = extras.getBoolean(VoiceNoteMediaController.EXTRA_PLAY_SINGLE, false);
 
@@ -100,7 +108,11 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
     SimpleTask.run(EXECUTOR,
                    () -> {
                      if (singlePlayback) {
-                       return loadMediaDescriptionForSinglePlayback(messageId);
+                       if (messageId != -1) {
+                         return loadMediaDescriptionForSinglePlayback(messageId);
+                       } else {
+                         return loadMediaDescriptionForDraftPlayback(threadId, uri);
+                       }
                      } else {
                        return loadMediaDescriptionsForConsecutivePlayback(messageId);
                      }
@@ -126,6 +138,10 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
 
                        player.prepare(dataSource);
                        canLoadMore = !singlePlayback;
+                     } else if (Objects.equals(latestUri, uri)) {
+                       Log.w(TAG, "Requested playback but no voice notes could be found.");
+                       ThreadUtil.postToMain(() -> Toast.makeText(context, R.string.VoiceNotePlaybackPreparer__failed_to_play_voice_message, Toast.LENGTH_SHORT)
+                                                        .show());
                      }
                    });
   }
@@ -248,11 +264,20 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
         return Collections.emptyList();
       }
 
-      return Collections.singletonList(VoiceNoteMediaDescriptionCompatFactory.buildMediaDescription(context ,messageRecord));
+      MediaDescriptionCompat mediaDescriptionCompat = VoiceNoteMediaDescriptionCompatFactory.buildMediaDescription(context ,messageRecord);
+      if (mediaDescriptionCompat == null) {
+        return Collections.emptyList();
+      } else {
+        return Collections.singletonList(mediaDescriptionCompat);
+      }
     } catch (NoSuchMessageException e) {
       Log.w(TAG, "Could not find message.", e);
       return Collections.emptyList();
     }
+  }
+
+  private @NonNull List<MediaDescriptionCompat> loadMediaDescriptionForDraftPlayback(long threadId, @NonNull Uri draftUri) {
+    return Collections.singletonList(VoiceNoteMediaDescriptionCompatFactory.buildMediaDescription(context, threadId, draftUri));
   }
 
   @WorkerThread
@@ -260,9 +285,10 @@ final class VoiceNotePlaybackPreparer implements MediaSessionConnector.PlaybackP
     try {
       List<MessageRecord> recordsAfter  = DatabaseFactory.getMmsSmsDatabase(context).getMessagesAfterVoiceNoteInclusive(messageId, LIMIT);
 
-      return Stream.of(buildFilteredMessageRecordList(recordsAfter))
-                   .map(record -> VoiceNoteMediaDescriptionCompatFactory.buildMediaDescription(context, record))
-                   .toList();
+      return buildFilteredMessageRecordList(recordsAfter).stream()
+                                                         .map(record -> VoiceNoteMediaDescriptionCompatFactory.buildMediaDescription(context, record))
+                                                         .filter(Objects::nonNull)
+                                                         .collect(Collectors.toList());
     } catch (NoSuchMessageException e) {
       Log.w(TAG, "Could not find message.", e);
       return Collections.emptyList();
